# oci-distribution-tester

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: release.yaml  rust.yml
docs/: CommandLineHelp.md
src/: cli.rs  client.rs  fake.rs  image.rs  lib.rs  main.rs  tester.rs
