[package]
name = "registry-load-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oci-distribution = "0.9.4"
rand = "0.8.5"
tar = "0.4.38"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-log = { version = "0.1.3", features = ["env_logger"]}
tracing-subscriber = { version = "0.3", features = [
  "std",
  "fmt",
  "json",
  "env-filter"
] }
