[package]
name = "oci-distribution-tester"
version = "0.1.0"
edition = "2021"
authors = [
  "Luke Swithenbank lswith@users.noreply.github.com"
]
description = "A tool for testing OCI distribution servers"
keywords = ["oci", "distribution", "registry", "test"]
repository = "https://github.com/lswith/oci-distribution-tester"

[badges]
maintenance = {status = "actively-developed"}

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["cargo"] }
flate2 = "1.0.25"
futures = "0.3.28"
oci-distribution = { git = "https://github.com/lswith/oci-distribution.git", branch = "next" }
# oci-distribution = { path = "../oci-distribution" }
rand = "0.8.5"
serde = "1.0.160"
serde_json = "1.0.96"
tar = "0.4.38"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-log = { version = "0.1.3", features = ["env_logger"]}
tracing-subscriber = { version = "0.3", features = [
  "std",
  "fmt",
  "json",
  "env-filter"
] }
url = "2.3.1"
